@@ -6,74 +6,91 @@
 #
 
 $dirname = 'popcon-entries';
+$gpgdir = 'popcon-gpg';
 $now = time;
-$state='initial'; # one of ('initial','accept','reject')
+$filenum=0;
 
-my($file,$mtime);
+sub get_report
+{
+  my($id,$file,$mtime,$vers);
+  my $line=$_;
+  chomp $line;
+  my @line=split(/ +/, $line);
+  my %field;
+  for (@line)
+  {
+    my ($key, $value) = split(':', $_, 2);
+    $field{$key}=$value;
+  };
+  $id=$field{'ID'};
+  if (!defined($id) || $id !~ /^([a-f0-9]{32})$/)
+  {
+    print STDERR "Bad hostid: $id\n";
+    return 'reject';
+  }
+  $id=$1; #untaint $id
+  $vers=$field{'POPCONVER'};
+  if (defined($vers) && $vers =~ /^1\.56ubuntu1/)
+  {
+    print STDERR "Report rejected: $vers: $id\n";
+    return 'reject';
+  }
+  $mtime=$field{'TIME'};
+  if (!defined($mtime) || $mtime!~/^([0-9]+)$/)
+  {
+    print STDERR "Bad mtime $mtime\n";
+    return 'reject';
+  }
+  $mtime=int $1; #untaint $mtime;
+  $mtime=$now if ($mtime > $now);
+  my $dir=substr($id,0,2);
+  unless (-d "$dirname/$dir") {
+    mkdir("$dirname/$dir",0755) or return 'reject';
+  }
+  $file="$dirname/$dir/$id";
+  open REPORT, ">",$file or return 'reject';
+  print REPORT $_;
+  while(<>)
+  {
+    /^From/ and last;
+    print REPORT $_; #accept line.
+    /^END-POPULARITY-CONTEST-0/ and do
+    {
+      close REPORT;
+      utime $mtime, $mtime, $file;
+      return 'accept';
+    };
+  }
+  close REPORT;
+  unlink $file;
+  print STDERR "Bad report $file\n";
+  return 'reject';
+}
+
+sub get_gpg
+{
+  my $file="$gpgdir/$filenum.txt.gpg";
+  $filenum++;
+  open REPORT, ">",$file or return 'reject';
+  print REPORT $_;
+  while(<>)
+  {
+    /^From/ and last;
+    print REPORT $_; #accept line.
+    /^-----END PGP MESSAGE-----/ and do
+    {
+      close REPORT;
+      return 'accept';
+    };
+  }
+  close REPORT;
+  unlink $file;
+  print STDERR "Bad report $file\n";
+  return 'reject';
+}
+
 while(<>)
 {
-    $state eq 'initial' and do
-    {
-       /^POPULARITY-CONTEST-0/ or next;
-       my @line=split(/ +/);
-       my %field;
-       for (@line)
-       {
-	    my ($key, $value) = split(':', $_, 2);
-            $field{$key}=$value;
-       };
-       $id=$field{'ID'};
-       if (!defined($id) || $id !~ /^([a-f0-9]{32})$/) 
-       {
-         print STDERR "Bad hostid: $id\n";
-         $state='reject'; next;
-       }
-       $id=$1; #untaint $id
-       $mtime=$field{'TIME'};
-       if (!defined($mtime) || $mtime!~/^([0-9]+)$/)
-       {
-         print STDERR "Bad mtime $mtime\n";
-         $state='reject'; next;
-       }
-       $mtime=int $1; #untaint $mtime;
-       $mtime=$now if ($mtime > $now);
-       my $dir=substr($id,0,2);
-       unless (-d "$dirname/$dir") {
-         mkdir("$dirname/$dir",0755) or do {$state='reject';next;};
-       };
-       $file="$dirname/$dir/$id"; 
-       open REPORT, ">",$file or do {$state='reject';next;};
-       print REPORT $_;
-       $state='accept'; next;
-    };
-    $state eq 'reject' and do
-    {
-      /^From/ or next;
-      $state='initial';next;
-    };
-    $state eq 'accept' and do
-    {
-      /^From/ and do 
-      {
-        close REPORT; 
-        unlink $file; 
-        print STDERR "Bad report $file\n";
-        $state='initial';
-        next;
-      };
-      print REPORT $_; #accept line.
-      /^END-POPULARITY-CONTEST-0/ and do 
-      {
-        close REPORT; 
-        utime $mtime, $mtime, $file;
-        $state='initial';
-        next;
-      };
-    };
-}
-if ($state eq 'accept')
-{
-        close REPORT;
-        unlink $file; #Reject
-        print STDERR "Bad last report $file\n";
+    /^POPULARITY-CONTEST-0/ and get_report();
+    /^-----BEGIN PGP MESSAGE-----/ and get_gpg();
 }
