@@ -21,6 +21,8 @@ popularity-contest (1.58) UNRELEASED; urgency=low
         subsequent release.
     + examples/cgi-bin/popcon.cgi:
       - Accept encrypted report.
+    + examples/bin/prepop.pl, examples/bin/popcon-process.sh
+      - Add support for decrypting encrypted report
 
  -- Bill Allombert <ballombe@debian.org>  Sun, 19 May 2013 21:31:39 +0200
 
